fix: 100vw will appear x scrollbar

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -84,4 +84,7 @@ sm:py-3;
     z-index: -10;
     opacity: 0;
   }
+  .dvh100 {
+    height: 100dvh;
+  }
 }
